--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,27 +4,27 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         
-        <title>Illinois Budget Clock</title>
+        <title>Pennsylvania Budget Clock</title>
         
-        <meta name="description" content="See how long Illinois has been languishing without a budget, why it matters, & what you can do about it.">
+        <meta name="description" content="See how long Pennsylvania has been languishing without a budget, why it matters, & what you can do about it.">
         <meta name="author" content="Chi Hack Night">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <meta property="og:site_name" content="Illinois Budget Clock">
-        <meta property="og:title" content="Illinois Budget Clock">
+        <meta property="og:site_name" content="Pennsylvania Budget Clock">
+        <meta property="og:title" content="Pennsylvania Budget Clock">
         <meta property="og:type" content="website">
-        <meta property="og:description" content="See how long Illinois has been languishing without a budget, why it matters, & what you can do about it.">
-        <meta property="og:url" content="http://ilbudgetclock.com/">
-        <meta property="og:image" content="http://ilbudgetclock.com/images/screengrab.jpg">
+        <meta property="og:description" content="See how long Pennsylvania has been languishing without a budget, why it matters, & what you can do about it.">
+        <meta property="og:url" content="http://pabudgetclock.com/">
+        <meta property="og:image" content="http://pabudgetclock.com/images/screengrab.jpg"> <!-- need this -->
 
 
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:site" content="@chihacknight">
-        <meta name="twitter:creator" content="@chihacknight">
-        <meta name="twitter:description" content="See how long Illinois has been languishing without a budget, why it matters, & what you can do about it.">
-        <meta name="twitter:title" content="Illinois Budget Clock">
-        <meta name="twitter:url" content="http://ilbudgetclock.com/">
-        <meta name="twitter:image:src" content="http://ilbudgetclock.com/images/screengrab.jpg">
+        <meta name="twitter:site" content="@openpgh">
+        <meta name="twitter:creator" content="@openpgh">
+        <meta name="twitter:description" content="See how long Pennsylvania has been languishing without a budget, why it matters, & what you can do about it.">
+        <meta name="twitter:title" content="Pennsylvania Budget Clock">
+        <meta name="twitter:url" content="http://pabudgetclock.com/">
+        <meta name="twitter:image:src" content="http://pabudgetclock.com/images/screengrab.jpg"><!-- need this -->
 
         
         <link rel="stylesheet" href="css/custom.css">
