Localized default.html
yeah!

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
         <title>Pennsylvania Budget Clock</title>
         
         <meta name="description" content="See how long Pennsylvania has been languishing without a budget, why it matters, & what you can do about it.">
-        <meta name="author" content="Chi Hack Night">
+        <meta name="author" content="Open Pittsburgh & Chi Hack Night">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <meta property="og:site_name" content="Pennsylvania Budget Clock">
