--- a/css/custom.css
+++ b/css/custom.css
@@ -99,7 +99,7 @@ a:hover, a:active{
 	padding-left: 30px;
 	padding-right: 30px;
 	padding-top: 2px;
-	background-color: #c0392b;
+	background-color: #DEBC07;
 	text-align:center;
 }
 
