--- a/css/custom.css
+++ b/css/custom.css
@@ -1,26 +1,26 @@
 body {
 	font-family: 'Alegreya Sans', sans-serif;
 	margin: 0px;
-	background-color: #1818C9;
+	background-color: #729f98;
 	color: #eee;
 	font-size: 20px;
 }
 
 .header {
     padding: 30px 0;
-    background-color: #DEBC07;
+    background-color: #aa863a;
     text-align:center;
 }
 
 .content {
-    background-color: #1818C9;
+    background-color: #729f98;
     text-align:center;
     padding: 10px 50px;
 }
 
 .footer{
 	text-align: center;
-	background-color: #1818C9;
+	background-color: #729f98;
 }
 
 .about {
@@ -63,7 +63,7 @@ h1, h2, h3, .h1, .h2, .h3 {
 }
 
 a, a:visited{
-	color: #A2DED0;
+	color: #283018;
 	text-decoration: none;
 }
 a:hover, a:active{
@@ -99,7 +99,7 @@ a:hover, a:active{
 	padding-left: 30px;
 	padding-right: 30px;
 	padding-top: 2px;
-	background-color: #DEBC07;
+	background-color: #aa863a;
 	text-align:center;
 }
 
@@ -125,8 +125,8 @@ button{
     -webkit-tap-highlight-color: transparent;
 }
 button:hover, button:active{
-	border-color: #A2DED0;
-	color: #A2DED0;
+	border-color: #283018;
+	color: #283018;
 }
 
 .btn-next {
