--- a/css/custom.css
+++ b/css/custom.css
@@ -85,6 +85,21 @@ a:hover, a:active{
 	display: inline-block;
 	height: 40px;
 }
+#clock2 {
+	font-size: 50px;
+	display: inline-block;
+	padding-left: 10px;
+	padding-right: 10px;
+	margin-top: 10px;
+}
+#clock2>div {
+	display: inline-block;
+	min-width: 75px;
+}
+#months2, #days2, #hours2, #minutes2, #seconds2 {
+	display: inline-block;
+	height: 40px;
+}
 
 #reasons {
 	height: 100px;
@@ -227,6 +242,13 @@ button:hover, button:active{
 	#clock>div {
 		min-width: 48px;
 	}
+	#clock2 {
+		font-size: 40px;
+		margin-top: 0px;
+	}
+	#clock2>div {
+		min-width: 48px;
+	}	
 
 	.headshots img {
 	    display: none;
