Lots of cool updates
Oh man I made this governor thing work!

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,6 +76,7 @@
                 $("#hours").html(clock.get('hour'));
                 $("#minutes").html(clock.get('minute'));
                 $("#seconds").html(clock.get('second'));
+				$("#govdays").html(moment("February 9 2016 12:00:00").diff(moment(), 'hour'));
             }
 
             function shuffle(o){
