Added penn state reason

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,6 +53,7 @@
 				{title: "It is causing veteran lawmakers to quit in frustration.", source: "Lancaster Online", url: "http://lancasteronline.com/news/pennsylvania/state-lawmakers-announce-retirements-amidst-budget-impasse-witf-reports/article_672e7d16-bae9-11e5-a8c4-a743bdfe3a6c.html"},
 				{title: "The Department of Environmental Protection is losing the ability to fill nearly 200 vacant staff positions, including two dozen in the program that oversees shale gas drilling.", source: "Pittsburgh Post-Gazette's PowerSource", url: "http://powersource.post-gazette.com/powersource/policy-powersource/2016/02/02/Wolf-imposes-limits-filling-vacant-state-jobs/stories/201602030058"},
                 {title: "Failure to fund certain line items in a timely manner can be considered illegal, and the state is being thusly sued.", source: "Daily Collegian", url: "http://www.collegian.psu.edu/news/state_national_international/article_33808d3e-be12-11e5-9244-378ff09ebb14.html"}
+                {title: "Penn State will be forced to lay off 1,100 employees and shutter all of its agricultural extension offices.", source: "The Philidelphia Inquirer", url: "http://www.philly.com/philly/education/20160227_Budget_gridlock_could_cost_Penn_State_1_100_jobs.html"}
             ]
             var indices = []
             $.each(reasons, function( index, value ) {
