--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,7 +72,8 @@
             function updateClock(){
                 //clock = moment(moment("July 1 2016 00:00:00")).subtract(moment());
 				clock = moment();
-				countdown = moment.duration(end.diff(clock));
+				// countdown = moment.duration(end.diff(clock));
+				countdown = moment.duration(clock.diff(end));
 				console.log(countdown);
 				$("#months").html(countdown.get('month')); //$("#months").html(clock.get('month'));
                 $("#days").html(countdown.get('days')); // $("#days").html(clock.get('date'));
